# AvianHaven

./: .gitignore  Cargo.toml  HANABI_API_MIGRATION_GUIDE.md  HANABI_ASSESSMENT.md  HANABI_MIGRATION_STATUS.md  MANUAL.md  NINE_SLICE_UI_GUIDE.md  SMART_OBJECTS_GUIDE.md  STEAM_MVP_REQUIREMENTS.md  deprecation-fixes.md  features.md  guide.md  lunex-migration-plan.md
assets/data/: behavior_tree.ron  feeders.ron  flocking_behavior.ron  time_behavior.ron  ui_theme.ron  weather_effects.ron
data/education/: common_birds.ron  legendary_birds.ron  rare_birds.ron  uncommon_birds.ron
src/: achievements.rs  advanced_weather.rs  aesthetic_objects.rs  automated_testing.rs  bird.rs  bird_data.rs  bird_selection.rs  camera.rs  debug_console.rs  despawn.rs  feeder.rs  foraging_ecology.rs  garden_lighting.rs  hanabi_effects.rs  keybindings.rs  legacy_smart_objects.rs  loading_screen.rs  lunex_ui.rs  main.rs  nocturnal_behaviors.rs  old_audio.rs  predator_prey.rs  resources.rs  sanctuary_management.rs  smart_objects.rs  social_features.rs  tooltip.rs  ui.rs  ui_diagnostic.rs  ui_widgets.rs
src/animation/: components.rs  mod.rs  resources.rs  systems.rs
src/audio/: components.rs  mod.rs  resources.rs  systems.rs
src/bird_ai/: bt.rs  components.rs  config.rs  mod.rs  resources.rs  states.rs  systems.rs
src/catalog/: components.rs  mod.rs  resources.rs  systems.rs
src/environment/: components.rs  lighting.rs  mod.rs  resources.rs  systems.rs
src/flocking/: components.rs  mod.rs  systems.rs
src/journal/: components.rs  mod.rs  resources.rs  systems.rs  ui_builder.rs
(+62 files in other folders)
