[package]
name = "perch"
version = "0.1.0"
edition = "2024"
include = ["src/**/*"]

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_audio = "0.16.1"
bevy_enhanced_input = "0.18.0"
bevy_light_2d = "0.7.0"
bevy_rapier2d = { version = "0.30.0", features = ["simd-stable"] }
bevy_hanabi = "0.16"
chrono = "0.4.41"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.8.1"
dirs = "5.0"
steamworks = "0.11.0"
bevy_lunex = "0.4.2"
bevy_scriptum = "0.6.0"

# Performance optimizations
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Fast dev builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
